CWNew/force-app/main/default/objects/CW_Passenger__c/CW_Passenger__c.object-meta.xml
<CustomObject>
    <label>Passenger</label>
    <nameField>
        <label>Passenger Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Passengers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>