CWNew/force-app/main/default/objects/CW_Passenger__c/fields/CW_Age__c.field-meta.xml
<CustomField>
    <fullName>CW_Age__c</fullName>
    <label>Age</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>