CWNew/force-app/main/default/objects/CW_Passenger__c/fields/CW_Reservation__c.field-meta.xml
<CustomField>
    <fullName>CW_Reservation__c</fullName>
    <label>Reservation</label>
    <referenceTo>CW_Reservation__c</referenceTo>
    <relationshipLabel>Passengers</relationshipLabel>
    <relationshipName>Passengers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>