CWNew/force-app/main/default/objects/CW_Passenger__c/fields/CW_Seat_Number__c.field-meta.xml
<CustomField>
    <fullName>CW_Seat_Number__c</fullName>
    <label>Seat Number</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>